statefulset-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: nginx-sts
  namespace: default
  labels: 
    app: nginx-sts
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: nginx-sts
  template: 
    metadata: 
      labels: 
        app: nginx-sts
    spec: 
      containers: 
        - name: nginx
          image: nginxdemos/hello:0.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: nginx-sts
  namespace: default
  labels: 
    app: nginx-sts
spec: 
  ports: 
    - name: http
      port: 80
      targetPort: 80
  selector: 
    app: nginx-sts
  clusterIP: None
